2011-02-07 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17500: Improve error handling in ExtDirect router (Thanks to Helmut Hummel)

2011-02-07  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17478: Wrong behaviour of "$TYPO3_CONF_VARS['SYS']['sqlDebug'] = TRUE" (since #15425)

2011-02-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17464: ExtDirectCode is added twice

2011-02-06  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #12998: Icons for Word documents missing (Thanks to Tobias Schäfer)

2011-02-05  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17413: ExtJs Theme - use grey folder items for tree by default
	* Fixed bug #17057: StateProvider values not respected
	* Fixed bug #17493: Filelist misses open folder icon
	* Fixed bug #17490: After introducing the locking in #17289 no CSRF token will ever be deleted (Thanks to Helmut Hummel)

2011-02-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17374: implode() issues in Install Tool

2011-02-05  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17351: PHP_SCRIPT_EXT/INT in 4.5 doesn't work (Thanks to Jo Hasenau)

2011-02-04  Steffen Kamper  <steffen@typo3.org>

	* Merged em revision 4071

2011-02-04  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #17360: beforeWrap/afterWrap properties of TMENUITEM not working anymore (Thanks to Jo Hasenau)

2011-02-03  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17407: Pagetree cause endless loop in ExtJS events

2011-02-02  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17434: Pagetree: when start edit, the text should be selected
	* Fixed bug #17406: Pagetree Editor remains with empty value

2011-02-02  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17087: BE user password not changable via setup module with "saltedpasswords" (Thanks to Marcus Krause)
	* Fixed bug #17428: Parsetime comment is inserted BEFORE !doctype and html tag (Thanks to Georg Ringer)

2011-02-02  Jigal van Hemert  <jigal@xs4all.nl>